# rust-huff

./: Cargo.toml  out.txt  out.txt.huffed  out2.txt  output.txt
src/: lib.rs  main.rs
src/algorithm/: mod.rs
src/front/: mod.rs
src/log/: mod.rs
src/tree/: mod.rs
